# agentvec

./: .gitignore  .mcp.json  .mcp.json.example  AGENTVEC_NEXT_STEPS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  QUICKSTART.md  README.md
.github/workflows/: release.yml
agentvec/: Cargo.toml
agentvec-cache/agentvec_cache/: __init__.py
agentvec-cache/examples/: demo.py
agentvec-cli/: Cargo.toml
agentvec-cli/examples/: create_test_db.rs
agentvec-cli/src/: main.rs
agentvec-js/: README.md  test.mjs
agentvec-mcp/: README.md  pyproject.toml
agentvec-mcp/agentvec_mcp/: __init__.py  server.py
agentvec-mcp/tests/: __init__.py  conftest.py  test_server.py
agentvec-memory/: README.md  pyproject.toml
agentvec-memory/agentvec_memory/: __init__.py  cli.py  embedders.py  memory.py
agentvec-memory/tests/: __init__.py  conftest.py  test_memory.py
agentvec-mobile/: Cargo.toml  README.md  build.rs  generate-bindings.rs
agentvec-mobile/bindings/kotlin/uniffi/agentvec/: agentvec.kt
agentvec-mobile/bindings/swift/: agentvecFFI.h
agentvec-mobile/src/: agentvec.udl  lib.rs
agentvec-python/: Cargo.toml  README.md  pyproject.toml
agentvec-python/src/: lib.rs
agentvec-server/: Cargo.toml
agentvec-server/src/: config.rs  lib.rs  state.rs
agentvec-server/src/dto/: request.rs  response.rs
agentvec-server/src/routes/: collections.rs  health.rs  records.rs
agentvec/examples/: agent_memory.rs  basic_usage.rs  filtering.rs
agentvec/src/: collection.rs  export.rs  filter.rs  lib.rs
agentvec/src/search/: mod.rs  pq.rs
agentvec/src/search/hnsw/: parallel.rs
agentvec/src/storage/: vectors.rs
agentvec/tests/: comprehensive_tests.rs  robustness_tests.rs
examples/: 01_memory_vs_no_memory.py  02_persistent_assistant.py  03_learning_preferences.py  04_research_accumulator.py  05_smart_context_injection.py  06_pure_vector_performance.py  07_mcp_integration.py  README.md  agent_memory.py  basic_usage.py  end_to_end_memory.py
wip/agentvec-cache/: README.md  pyproject.toml
wip/agentvec-cache/agentvec_cache/: cache.py
wip/agentvec-cache/examples/: validate_code_search.py
wip/agentvec-js/: Cargo.toml  package.json
wip/agentvec-js/src/: lib.rs
wip/agentvec-mobile/bindings/swift/: agentvec.swift  agentvecFFI.modulemap
wip/agentvec-search/: README.md  pyproject.toml
wip/agentvec-search/agentvec_search/: __init__.py  cli.py  indexer.py
wip/agentvec-server/src/: error.rs  main.rs
wip/agentvec-server/src/routes/: mod.rs
