[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentvec-mcp"
version = "0.2.0"
description = "MCP server for AgentVec memory - gives AI agents persistent memory"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["mcp", "memory", "ai", "agents", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "agentvec-memory>=0.2.0,<0.3.0",
    "mcp>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
agentvec-mcp = "agentvec_mcp.server:run"

[project.urls]
Homepage = "https://github.com/user/agentvec"
Repository = "https://github.com/user/agentvec"
Documentation = "https://github.com/user/agentvec#readme"
Issues = "https://github.com/user/agentvec/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentvec_mcp*"]
