[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentvec-memory"
version = "0.2.0"
description = "Persistent tiered memory for AI agents"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["memory", "ai", "agents", "vector", "semantic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "agentvec>=0.2.0,<0.3.0",
    "fastembed>=0.2.0,<1.0.0",
    "click>=8.0.0,<9.0.0",
]

[project.optional-dependencies]
# Full-featured embeddings with GPU support (~3GB install)
gpu = [
    "sentence-transformers>=2.0.0,<3.0.0",
]
# For using OpenAI embeddings API
openai = [
    "openai>=1.0.0,<2.0.0",
]
# All optional embedding backends
all = [
    "sentence-transformers>=2.0.0,<3.0.0",
    "openai>=1.0.0,<2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
agentvec-memory = "agentvec_memory.cli:main"

[project.urls]
Homepage = "https://github.com/user/agentvec"
Repository = "https://github.com/user/agentvec"
Documentation = "https://github.com/user/agentvec#readme"
Issues = "https://github.com/user/agentvec/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentvec_memory*"]
