[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "agentvec"
version = "0.2.1"
description = "Embedded, serverless vector database for mutable AI agent memory — pure Rust, with native TTL, in-place upserts, and incremental HNSW search"
readme = "README.md"
authors = [{ name = "Akuming", email = "akwasiakumingamoah@gmail.com" }]
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["vector", "database", "embedding", "ai", "agent", "memory"]

[project.urls]
Homepage = "https://github.com/Akuming/agentvec"
Repository = "https://github.com/Akuming/agentvec"
Documentation = "https://github.com/Akuming/agentvec#readme"
Issues = "https://github.com/Akuming/agentvec/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "agentvec"
