[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentvec-cache"
version = "0.1.0"
description = "Semantic caching for LLM responses. Cut your API costs with similarity-based caching."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "AgentVec Team" }
]
keywords = ["llm", "cache", "semantic", "openai", "embeddings", "ai", "vector", "agentvec"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "agentvec>=0.2.0",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/Akuming/agentvec"
Documentation = "https://github.com/Akuming/agentvec#readme"
Repository = "https://github.com/Akuming/agentvec"
