[package]
name = "agentvec-js"
version = "0.2.0"
edition = "2021"
authors = ["AgentVec Contributors"]
description = "JavaScript/WASM bindings for AgentVec vector database"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Akuming/agentvec"
keywords = ["vector", "database", "wasm", "javascript", "ai"]

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1.6", features = ["v4", "js"] }
bincode = "1.3"

# Better error messages in debug mode
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
