[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentvec-search"
version = "0.1.0"
description = "Semantic code search - search your codebase with natural language"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "AgentVec Team" }
]
keywords = ["code", "search", "semantic", "grep", "embeddings", "ai", "vector", "agentvec"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Text Processing :: Indexing",
]

dependencies = [
    "agentvec>=0.2.0",
    "sentence-transformers>=2.2.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
agentvec-search = "agentvec_search.cli:main"

[project.urls]
Homepage = "https://github.com/Akuming/agentvec"
Documentation = "https://github.com/Akuming/agentvec#readme"
Repository = "https://github.com/Akuming/agentvec"
